--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
 }
 
+.App {
+  text-align: center;
+}
+.profile h3 {
+  margin-bottom: 2em;
+}
 #profile__img {
   height: 88px;
   width: 88px;
@@ -29,6 +35,7 @@ button {
 
 footer {
   border-top: 1px solid rgb(218, 214, 214);
+  text-align: left;
   padding-bottom: 2em;
   max-width: 70vw;
   margin: 0 auto;
@@ -62,6 +69,11 @@ a:hover .service  {
   font-weight: 500;
   margin-bottom: -10px;
   
+}
+
+.agreement {
+  margin-top: 1em;
+  margin-bottom: 1.5em;
 }
 
 .share {
@@ -105,7 +117,7 @@ a:hover .service  {
 
   #first_name,
   #last_name {
-    max-width: 85%;
+    max-width: 3fr;
   }
 
 }
@@ -150,17 +162,19 @@ textarea,
   margin-bottom: 2em;
 }
 
-#agreement {
+[type='checkbox'],
+[htmlFor="agreement"] {
+  font-weight: 300;
+  color: #475467;
+  line-height: 24px;
+  font-size: 16px;
   font-weight: 400;
   color: #475467;
 }
 
-[htmlFor="agreement"] {
-  margin-bottom: 10em;
-}
-
 textarea {
   resize: none;
-  
+  margin-top: 1em;
 }
+
 
